tests/ui/issues/issue-14091.stderr
error[E0308]: mismatched types
  --> $DIR/issue-14091.rs:2:13
   |
LL |     assert!(1,1);
   |             ^
   |             |
   |             expected `bool`, found integer
   |             expected due to this

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
